Enable Authentication for some routes.
